tests/invalid/depth19.h
#include "depth20.h"
